--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #B0E0E6;
+    background-color: #fff;
 }
 
 .main{
@@ -28,11 +28,13 @@ body{
 h1{
     margin-top:10px;
     font-size: 3rem;
+    font-family:Verdana, Tahoma, sans-serif;
+    font-weight: 400;
 }
 
 #cidade{
     padding:20px;
-    border: 2px solid #DCDCDC;
+    border: 2px solid #0f0e0e;
     border-radius: 5px;
     font-size: 1rem;
     
@@ -44,7 +46,8 @@ h1{
     border-style: none;
     width: 12vh;
     font-size: 1rem;
-    background-color: #B0E0E6;
+    background-color: rgb(7, 83, 128);
+    color:#fff;
     font-weight: bold;
     cursor: pointer;
     transition: 0.5s;
@@ -52,4 +55,66 @@ h1{
 
 #buscar:hover{
     transform: scale(1.1); 
+}
+
+.clima{
+    font-size: 4rem;
+    padding:10px;
+    color:#0a0101 ;
+    align-items: center;gap:5px;
+}
+
+
+.celsius{
+    font-size: 4.3rem;
+    color: rgb(7, 83, 128);
+}
+
+
+.sensTermica{
+    font-size: 1rem;
+    font-weight:100;
+    text-align: center;
+    margin-left:100px;
+    padding:20px;
+    color:#3a3939;
+}
+
+
+.desc{
+    text-align: center;
+    font-size: 1.4rem;
+
+}
+
+.cidade{
+    font-size: 1.1rem;
+    display: flex;
+    gap:10px;
+}
+
+.cidadeName{
+    font-size: 1.5rem;
+    color: rgb(7, 83, 128);
+   
+}
+
+
+#animation{
+    width: 300px;
+    height: 300px;
+}
+@media (max-width: 780px) {
+    h1 {
+        display: flex;
+        font-size: 2rem;
+        width: 100%;    
+    }
+
+    #buscar{
+        margin-top:10px;
+        width: 100px;    
+    }
+
+    
 }
