--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
 }
 
 h1{
+
   font-size: 3.5rem;
   color: #000000;
   text-align: center;
@@ -84,7 +85,7 @@ h1{
 
 .sensTermica {
     font-size: 1rem;
-    font-weight: 300;
+    font-weight: 400;
     text-align: center;
     padding: 10px;
     opacity: 0.8;
@@ -116,6 +117,10 @@ h1{
     padding:20px;
 }
 
+.iconTer{
+    width: 30px;
+    height: auto;
+}
 
 
 @media (max-width: 780px) {
